# petrodata

./: .gitignore
data-pipeline/: .dockerignore  Dockerfile  NEWS_INGEST.md  README.md  dashboard.py  news_schema.py  pipeline_company_enrichment.py  pyproject.toml  run.py  run_news.py  schema.py
data-pipeline/companies/: companies_enriched.json  companies_public.csv
data-pipeline/docker/: entrypoint.sh  run-news-cron.sh
data-pipeline/fixtures/: projects_expected.json  sample_cerro_moro.md  sample_don_otto.md
data-pipeline/out_copper_2026_pptx/: extracted.json  ocr_manifest.json  page_groups.json  pages_manifest.json  projects.csv  projects.json  projects_long.csv  review_queue.json
data-pipeline/out_gold_2026_pptx/: extracted.json  ocr_manifest.json  page_groups.json  pages_manifest.json  projects.csv  projects.json  projects_long.csv  review_queue.json
data-pipeline/out_key_minerals_2026_pptx_pptx/: extracted.json  ocr_manifest.json  page_groups.json  pages_manifest.json  projects.csv  projects_long.csv  review_queue.json
data-pipeline/out_lithium_2026_pptx/: extracted.json  ocr_manifest.json  page_groups.json  pages_manifest.json  projects.csv  projects.json  projects_long.csv  review_queue.json
data-pipeline/out_silver_2026_pptx/: extracted.json  ocr_manifest.json  page_groups.json  pages_manifest.json  projects.csv  projects.json  projects_long.csv  review_queue.json
data-pipeline/out_uranium/: extracted.json  ocr_manifest.json  page_groups.json  pages_manifest.json  projects.csv  projects.json  projects_long.csv  review_queue.json
(+438 files in other folders)
