[project]
name = "mining-extract"
version = "0.1.0"
description = "Extract structured records from Argentine mining-project fact-sheet PDFs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pymupdf>=1.24",
    "mistralai>=1.0",
    "openpyxl>=3.1.5",
    "httpx>=0.28.1",
    "pillow>=12.2.0",
    "feedparser>=6.0.12",
]

[project.optional-dependencies]
ocr = [
    "pytesseract>=0.3.10",
    "pillow>=10",
]

[dependency-groups]
dev = [
    "pytest>=8",
]

[project.scripts]
mining-extract = "run:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
